[package]
name = "pingpong"
version = "0.1.0"
edition = "2024"

[profile.release]
# Level 3 is the highest optimization for speed
opt-level = 3
# "fat" LTO performs aggressive optimizations across all crates in the graph
lto = "fat"
# Setting this to 1 allows for maximum global optimization at the cost of compile time
codegen-units = 1
# Removes panic unwinding code, making the binary smaller and sometimes faster
panic = "abort"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
chrono = "0.4"


# note to self:   RUSTFLAGS="-C target-cpu=native" cargo build --release
#
# # rustup target add x86_64-unknown-linux-musl
# # RUSTFLAGS="-C target-cpu=native" cargo build --release --target x86_64-unknown-linux-musl
